# llama3-instruction-tuning

./: .gitignore  .netrc  README.md  eval_config.yaml  generation_config.yaml  lora_finetune_single_device.yaml  pyproject.toml  quantization_config.yaml
wandb/: latest-run
wandb/run-20240419_071300-mjwttrie/: run-mjwttrie.wandb
wandb/run-20240419_071300-mjwttrie/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20240419_071612-gn6a12xm/: run-gn6a12xm.wandb
wandb/run-20240419_071612-gn6a12xm/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20240419_071951-5tevv10f/: run-5tevv10f.wandb
wandb/run-20240419_071951-5tevv10f/files/: config.yaml  requirements.txt  torchtune_config.yaml  wandb-metadata.json
wandb/run-20240419_072035-futmecq4/: run-futmecq4.wandb
wandb/run-20240419_072035-futmecq4/files/: config.yaml  wandb-metadata.json
wandb/run-20240419_072101-ijhlikeq/: run-ijhlikeq.wandb
wandb/run-20240419_072101-ijhlikeq/files/: config.yaml  wandb-metadata.json
wandb/run-20240419_072123-0fmjv2w3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
