[tool.poetry]
name = "this-studio"
version = "0.1.0"
description = ""
authors = ["Somesh  <someshfengde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchtune = "^0.1.1"
setuptools = "^69.5.1"
wandb = "^0.16.6"
lm-eval = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
